fixed card sizing and overflow

--- a/client/src/pages/dashboard/project-views/ProjectViews.module.scss
+++ b/client/src/pages/dashboard/project-views/ProjectViews.module.scss
@@ -14,5 +14,6 @@
 
   .content {
     flex: 1;
+    min-height: fit-content;
   }
 }
