--- a/client/src/pages/dashboard/project-views/board/Board.module.scss
+++ b/client/src/pages/dashboard/project-views/board/Board.module.scss
@@ -2,5 +2,4 @@
 
 .container {
   @include mixins.card($height: 100%);
-  min-height: fit-content;
 }
