--- a/client/src/pages/dashboard/project-views/people/People.module.scss
+++ b/client/src/pages/dashboard/project-views/people/People.module.scss
@@ -1,12 +1,13 @@
 .container {
   height: 100%;
   width: 100%;
-  display: grid;
-  grid-template-columns: 1fr auto;
-  grid-template-rows: 1fr 1fr;
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
 
-  & > * {
-    box-sizing: border-box;
+  .row {
+    height: 100%;
+    display: flex;
+    gap: 1rem;
   }
 }
