--- a/client/src/pages/dashboard/project-views/people/history/History.module.scss
+++ b/client/src/pages/dashboard/project-views/people/history/History.module.scss
@@ -3,7 +3,6 @@
 
 .container {
   @include mixins.card($width: 100%, $height: 100%);
-  grid-column: 1 / -1;
   display: flex;
   flex-direction: column;
 
